# ThreadSchedule

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  INTEGRATION.md  README.md  conanfile.py  mkdocs.yml  requirements.txt  run_benchmark_graphs.sh  run_benchmarks.sh
.conan/: README.md  conanfile.py
.github/: WORKFLOWS_QUICKREF.md  markdown-link-check-config.json
.github/workflows/: README.md  abi-compat.yml  build.yml  ci.yml  code-quality.yml  conan-deploy.yml  conan-package.yml  documentation.yml  integration.yml  mkdocs-deploy.yml  registry-integration.yml  release.yml  runtime-tests.yml  sanitizers.yml  tests.yml
benchmarks/: CMakeLists.txt  README.md  audio_video_benchmarks.cpp  callable_benchmarks.cpp  callable_std_benchmarks.cpp  database_benchmarks.cpp  generate_benchmark_report.py  generate_readme_graphs.py  memory_benchmarks.cpp  reflection_registry_benchmarks.cpp  resampling_benchmarks.cpp  threadpool_benchmarks.cpp  throughput_benchmarks.cpp  web_server_benchmarks.cpp
cmake/: ThreadScheduleAddCPM.cmake  ThreadScheduleConfig.cmake.in
docs/: ADVANCED.md  API.md  API_DESIGN_V3.md  CHAOS_TESTING.md  CMAKE_REFERENCE.md  COMPATIBILITY.md  COROUTINES.md  ERROR_HANDLING.md  INTEGRATION.md  MIGRATION_V2.md  MIGRATION_V3.md  PROFILES.md  README-DOCS.md  README.md  REFLECT.md  REGISTRY.md  SCHEDULED_TASKS.md  STABLE_ABI.md  TOPOLOGY_NUMA.md  index.md
docs/development/: building.md  contributing.md  performance.md
docs/getting-started/: installation.md  quick-start.md
docs/user-guide/: thread-pools.md  thread-wrappers.md
examples/: CMakeLists.txt  basic_example.cpp  error_handling_example.cpp  external_registry_example.cpp  performance_benchmark.cpp  registry_chainable_example.cpp  registry_example.cpp  registry_merge_example.cpp  scheduled_tasks_example.cpp  thread_configuration_example.cpp
examples/runtime_shared/: CMakeLists.txt  libA.cpp  libB.cpp  main.cpp
include/threadschedule/: abi.hpp  advanced.hpp  callable.hpp  chaos.hpp  concepts.hpp  core.hpp  error_handler.hpp  expected.hpp  export.hpp  futures.hpp  generator.hpp  inline_pool.hpp  profiles.hpp  pthread_wrapper.hpp  reflect.hpp  reflection.hpp  registered_threads.hpp  scheduled_pool.hpp  scheduler_policy.hpp  task.hpp  task_group.hpp  thread_pool.hpp  thread_pool_with_errors.hpp  thread_registry.hpp  thread_wrapper.hpp  threadschedule.hpp  topology.hpp
include/threadschedule/detail/: registered_thread_backend.hpp  thread_backend.hpp
integration_tests/: README.md
integration_tests/app_injection/: CMakeLists.txt
integration_tests/app_injection/libA/: CMakeLists.txt
integration_tests/app_injection/libA/include/appinj_libA/: libA.hpp
integration_tests/app_injection/libA/src/: libA.cpp
integration_tests/app_injection/libB/: CMakeLists.txt
integration_tests/app_injection/libB/include/appinj_libB/: libB.hpp
integration_tests/app_injection/libB/src/: libB.cpp
integration_tests/app_injection/main_app/: CMakeLists.txt
integration_tests/app_injection/main_app/src/: main.cpp
integration_tests/composite_merge/: CMakeLists.txt
integration_tests/composite_merge/libA/: CMakeLists.txt
integration_tests/composite_merge/libA/include/library_ca/: library_ca.hpp
integration_tests/composite_merge/libA/src/: library_ca.cpp
integration_tests/composite_merge/libB/: CMakeLists.txt
integration_tests/composite_merge/libB/include/library_cb/: library_cb.hpp
integration_tests/composite_merge/libB/src/: library_cb.cpp
integration_tests/composite_merge/main_app/: CMakeLists.txt  main.cpp
integration_tests/library_a/: CMakeLists.txt  LibraryAConfig.cmake.in
integration_tests/library_a/include/library_a/: library_a.hpp
integration_tests/library_a/src/: library_a.cpp
integration_tests/library_b/: CMakeLists.txt  LibraryBConfig.cmake.in
integration_tests/library_b/include/library_b/: library_b.hpp
integration_tests/library_b/src/: library_b.cpp
integration_tests/main_app/: CMakeLists.txt  main.cpp
integration_tests/runtime_abi_compat/: CMakeLists.txt
integration_tests/runtime_abi_compat/libA/: CMakeLists.txt
integration_tests/runtime_abi_compat/libA/include/library_ra/: library_ra.hpp
integration_tests/runtime_abi_compat/libA/src/: library_ra.cpp
integration_tests/runtime_abi_compat/libB/: CMakeLists.txt
integration_tests/runtime_abi_compat/libB/include/library_rb/: library_rb.hpp
integration_tests/runtime_abi_compat/libB/src/: library_rb.cpp
integration_tests/runtime_abi_compat/main_app/: CMakeLists.txt  main.cpp
integration_tests/runtime_single/: CMakeLists.txt
integration_tests/runtime_single/libA/: CMakeLists.txt
integration_tests/runtime_single/libA/include/library_ra/: library_ra.hpp
integration_tests/runtime_single/libA/src/: library_ra.cpp
integration_tests/runtime_single/libB/: CMakeLists.txt
integration_tests/runtime_single/libB/include/library_rb/: library_rb.hpp
integration_tests/runtime_single/libB/src/: library_rb.cpp
integration_tests/runtime_single/main_app/: CMakeLists.txt  main.cpp
integration_tests/stable_abi_runtime/: CMakeLists.txt
integration_tests/stable_abi_runtime/consumer/: main.cpp
integration_tests/stable_abi_runtime/producer/: producer.cpp
src/: runtime_registry.cpp  threadschedule.cppm
tests/: CMakeLists.txt  abi_test.cpp  advanced_api_test.cpp  callable_test.cpp  compile_test.cpp  coroutine_pool_test.cpp  coroutine_test.cpp  expected_test.cpp  futures_test.cpp  pool_backend_test.cpp  reflect_test.cpp  reflection_test.cpp  registry_query_test.cpp  runtime_registry_test.cpp  stable_abi_target_test.cpp  thread_backend_test.cpp  thread_config_test.cpp  thread_pool_test.cpp  thread_pool_v2_test.cpp  thread_registry_stress_test.cpp  thread_registry_test.cpp  thread_view_backend_test.cpp  thread_wrapper_test.cpp  thread_wrapper_view_test.cpp  v3_api_test.cpp
